# esim-desktop

./: .gitignore  DESIGN.md  build.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-desktop.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: at_protocol.rs  commands.rs  error.rs  lib.rs  main.rs  product_config.rs  report.rs  serial_manager.rs  settings.rs  types.rs
src/components/layout/: AppFooter.vue  AppHeader.vue
src/lib/: error-codes.ts
src/router/: index.ts
src/stores/: device.ts  production.ts  report.ts
src/views/: ConfigView.vue  DebugView.vue  ProductionView.vue  ReportView.vue  SettingsView.vue
